Try to stop overlap of footer and main section

--- a/app/javascript/pages/base.scss
+++ b/app/javascript/pages/base.scss
@@ -6,6 +6,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,900,700");
 @import url("https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic");
 
+
 html {
   @apply antialiased;
 }
@@ -30,12 +31,12 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
-
+  -ms-flex-negative: 0 !important;
   main {
     flex: 1;
     display: flex;
     flex-direction: column;
-
+    -ms-flex-negative: 0 !important;
     > section {
       flex: 1;
     }
